# solaibot

./: .aiexclude   .gitignore  .gitmodules  AGENTS.md  README.md  settings.gradle.kts
.github/workflows/: build_android.yaml
android/: AGENTS.md  CLAUDE.md  GEMINI.md  QWEN.md  README.md  Zerion-QuickStart.md  build.gradle.kts  prompts.txt
android/app/: build.gradle.kts
android/docs/: CBx402.md  Solana-RPC.md  function-call.md  mobile-wallet-adapter.md  x402-Header.md  x402-SolAIBot.md  x402-integration.md  x402-status.md
android/docs/PayAIx402/: introduction.mdx  reference.mdx  supported-networks.mdx
android/docs/zerion/: llms.txt
android/gradle/: libs.versions.toml
android/references/: resize_icons.py
app/: build.gradle.kts
context/: PitchReference.md  Slides.md  idea.md
demo/: hume-video-script.md  solaibotDemo.md  speech.md  video-script.md  youtubedescription.md
demo/voice/: README.md  closedAITTS.md  demo-voice.py  main.py  video-voice.py
uagentdemo/: .env.client.example  .env.example  .env.merchant.example  README-Agentverse.md  README.md  client-sample.py  main.py  merchant-agentverse.py  merchant.py  models.py  pyproject.toml
uagentdemo/docs/: ClientMerchant.md  PayAIx402-Client.md  PayAIx402-Flask.md  PayAIx402-Merchant.md  uAgentsDocs.md  uAgentsMCP.md  uAgentsWith402.md
uagentdemo/src/: agentverse-proxy.py  client.py  merchant.py  models.py  register.py
webpage/: hackathon.html  hume-video-script.md  hume-video-script2.md  index.html  video-script.md
webpage/humedocs/: hume.md
webpage/voice/: README.md  main.py  pyproject.toml
(+251 files in other folders)
