[project]
name = "uagentdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "base58>=2.1.1",
    "dotenv>=0.9.9",
    "httpx>=0.27.0",
    "solana>=0.36.9",
    "uagents>=0.22.10",
    "uagents-adapter[mcp]>=0.6.2",
    "x402>=0.2.1",
]
